# smappservice-rs

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rustfmt.yml
integration_tests/: Cargo.toml  README.md
integration_tests/test-app/: Cargo.toml
integration_tests/test-app/src/: main.rs
integration_tests/test_agent/: Cargo.toml
integration_tests/test_agent/src/: main.rs
integration_tests/test_daemon/: Cargo.toml
integration_tests/test_daemon/src/: main.rs
integration_tests/test_loginitem/: Cargo.toml
integration_tests/test_loginitem/src/: main.rs
integration_tests/test_mainapp/: Cargo.toml
integration_tests/test_mainapp/src/: main.rs
src/: lib.rs
